src/parser/snapshots/rbx_rsml__parser__tests__compiler_tween_four_args.snap
---
source: src/parser/mod.rs
assertion_line: 418
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
