src/parser/snapshots/rbx_rsml__parser__tests__compiler_tween_math_chained_numeric_time.snap
---
source: src/parser/mod.rs
assertion_line: 427
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
